--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,8 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
-    "nodemon": "^3.1.11"
+    "nodemailer": "^7.0.13",
+    "nodemon": "^3.1.11",
+    "otp-generator": "^4.0.1"
   }
 }
